syntax = "proto3";

package v1;

import "third_party/tagger/tagger.proto";

option go_package = "./v1;api_v1";

message SearchUserRequest{
    string username = 1 [(tagger.tags) = "form:\"username\" binding:\"required\""];
}

message SearchUserResponse{
    message Item{
        int32 id = 1;
        string username = 2;
        string avatar = 3;
        string name = 4;
        string surname = 5;
    }

    repeated Item items = 1;
}
